fix: shiki code wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,3 +69,7 @@ html.dark .shiki span {
   font-weight: var(--shiki-dark-font-weight) !important;
   text-decoration: var(--shiki-dark-text-decoration) !important;
 }
+
+pre.shiki {
+  white-space: pre-wrap;
+}
